# siyuan-bridge

./: .gitignore  .mcp.json  .npmignore  README.md  config.yaml.example  package.json  pyproject.toml  skills-lock.json  tsconfig.build.json
.superpowers/brainstorm/45076-1781145500/content/: architecture-design.html  design.html
.superpowers/brainstorm/45076-1781145500/state/: server-info  server-stopped
.superpowers/brainstorm/70162-1781149713/state/: server-stopped
.superpowers/brainstorm/74262-1781155839/content/: sy-last-flow-v2.html  sy-last-flow.html
.superpowers/brainstorm/74262-1781155839/state/: server-info  server-stopped
doc/: design-preview.html  gboss-bot-preview.html  siyuan-mcp-bridge-design.md  siyuan-mcp-bridge-functional-design.md  siyuan-mcp-improvement-plan.md  siyuan-mcp-retrospective.md  sy-last-flow.drawio  思源笔记与AI集成-需求文档.md
doc/superpowers/plans/: 2026-06-10-notebook-auto-list.md  2026-06-10-siyuan-mcp-implementation.md  2026-06-11-redesign-tools.md  2026-06-11-redesign-v2.md
doc/superpowers/specs/: 2026-06-10-notebook-auto-list.md  2026-06-10-siyuan-mcp-design.md  2026-06-11-redesign-tools.md  2026-06-11-redesign-v2.md
siyuan_mcp/: __init__.py  __main__.py  mapper.py  server.py  tagger.py
siyuan_mcp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
siyuan_mcp/codebase/: __init__.py  search.py
siyuan_mcp/config/: __init__.py  defaults.py  loader.py
siyuan_mcp/siyuan/: __init__.py  client.py  models.py
src/: cli.ts
src/config/: index.ts  loader.ts
tests/: test_codebase_search.py  test_config_loader.py  test_mapper.py  test_server.py  test_siyuan_client.py  test_tagger.py
