[project]
name = "siyuan-mcp"
version = "0.1.0"
description = "MCP service connecting Claude with Siyuan Note"
readme = "README.md"
authors = [
    { name = "Niko", email = "niko@siyuan-bridge.dev" },
]
license = "MIT"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/qyzxcswbll/siyuan-bridge"
Repository = "https://github.com/qyzxcswbll/siyuan-bridge"
Issues = "https://github.com/qyzxcswbll/siyuan-bridge/issues"

[project.scripts]
siyuan-mcp = "siyuan_mcp.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["siyuan_mcp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
